# woterm

./: CMakeLists.txt  README-de.md  README-es.md  README-fr.md  README-hi.md  README-id.md  README-ja.md  README-ko.md  README-ru.md  README-zh.md  README-zh_CN.md  README-zh_TW.md  README.md  README_zh.md
doc/: Performance-de.md  Performance-en.md  Performance-es.md  Performance-fr.md  Performance-hi.md  Performance-id.md  Performance-ja.md  Performance-ko.md  Performance-ru.md  Performance-zh_CN.md  Performance-zh_TW.md  README-de.md  README-es.md  README-fr.md  README-hi.md  README-id.md  README-ja.md  README-ko.md  README-ru.md  README-zh_CN.md  README-zh_TW.md  introduce.txt
kxftp/: CMakeLists.txt  qkxftp.qrc  qkxftp_private.h  qkxftp_share.h  qkxftpclient.cpp  qkxftpclient.h  qkxftpdownload.cpp  qkxftpdownload.h  qkxftplocalmodel.cpp  qkxftplocalmodel.h  qkxftpremotemodel.cpp  qkxftpremotemodel.h  qkxftprequest.cpp  qkxftprequest.h  qkxftpresponse.cpp  qkxftpresponse.h  qkxftpserver.cpp  qkxftpserver.h  qkxftpserverprivate.cpp  qkxftpserverprivate.h  qkxftptransfermodel.cpp  qkxftptransfermodel.h  qkxftptransferwidget.cpp  qkxftptransferwidget.h  qkxftpupload.cpp  qkxftpupload.h
kxterm/: CMakeLists.txt  keysym2ucs.c  qkxbackgroundimagerender.cpp  qkxbackgroundimagerender.h  qkxcolorschema.cpp  qkxcolorschema.h  qkxcombinekeyactiondialog.cpp  qkxcombinekeyactiondialog.h  qkxcombinekeyactiondialog.ui  qkxechoinput.cpp  qkxechoinput.h  qkxhistory.cpp  qkxhistory.h  qkxkeytranslator.cpp  qkxkeytranslator.h  qkxkeytranslatormodel.cpp  qkxkeytranslatormodel.h  qkxscreen.cpp  qkxscreen.h  qkxsearch.cpp  qkxsearch.h  qkxsearch.ui  qkxshortcutinputdialog.cpp  qkxshortcutinputdialog.h  qkxshortcutinputdialog.ui  qkxterm.qrc  qkxterm_share.h  qkxtermitem.cpp  qkxtermitem.h  qkxtermwidget.cpp  qkxtermwidget.h  qkxtouchpoint.cpp  qkxtouchpoint.h  qkxutils.cpp  qkxutils.h  qkxview.cpp  qkxview.h  qvte.cpp  qvte.h  qvtedef.h  (+4 more)
kxterm/kblayout/: keyinfo.txt
kxutil/: CMakeLists.txt  qkxabstractcrypt.cpp  qkxabstractcrypt.h  qkxaescrypt.cpp  qkxaescrypt.h  qkxcipher.cpp  qkxcipher.h  qkxcleandesktop.cpp  qkxcleandesktop.h  qkxcleandesktop_win.cpp  qkxhttpclient.cpp  qkxhttpclient.h  qkxkeepwakeup.cpp  qkxkeepwakeup.h  qkxkeymapping.cpp  qkxkeymapping.h  qkxlengthbodypacket.cpp  qkxlengthbodypacket.h  qkxlocalpeer.cpp  qkxlocalpeer.h  qkxmacaddress.cpp  qkxmacaddress.h  qkxmactimer.h  qkxmactimer.mm  qkxmessagebox.h  qkxopensslthreadcryptosafety.cpp  qkxopensslthreadcryptosafety.h  qkxprocesslaunch.cpp  qkxprocesslaunch.h  qkxrc4crypt.cpp  qkxrc4crypt.h  qkxsetting.cpp  qkxsetting.h  qkxsharememory.cpp  qkxsharememory.h  qkxtouchpoint.h  qkxutil_private.h  qkxutil_share.h  qkxwallpaper.h  qkxwallpaper_unix.cpp  (+5 more)
kxvnc/: CMakeLists.txt  keysymdef.h  main.cpp  qkxaudioplayer.cpp  qkxaudioplayer.h  qkxbuffer.cpp  qkxbuffer.h  qkxh264decoder.cpp  qkxh264decoder.h  qkxjpegdecoder.cpp  qkxjpegdecoder.h  qkxopusdecoder.cpp  qkxopusdecoder.h  qkxreader.h  qkxresample.cpp  qkxresample.h  qkxsocket.cpp  qkxsocket.h  qkxutils.cpp  qkxutils.h  qkxvnc.cpp  qkxvnc.h  qkxvnc_share.h  qkxvncwidget.cpp  qkxvncwidget.h  qkxzip.cpp  qkxzip.h
kxvnc/resample/: config.h  configtemplate.h  filterkit.cpp  filterkit.h  libresample.h  resample.cpp  resample_defs.h  resamplesubs.cpp
plugins/: CMakeLists.txt
plugins/docs/: plugin_session_development_guide_en.md  plugin_session_development_guide_zh.md
plugins/frpsession/: CMakeLists.txt  wt_session_frps_plugin.cpp
plugins/include/: wt_session_plugin.h
private/: readme.txt
private/keytabs/: linux.keytab  macos.keytab  solaris.keytab
private/languages/: release.sh  update.bat  update.sh  woterm_zh.ts
private/playbooks/chart/: main.qml  playbook.json
private/playbooks/demo/: main.qml  playbook.json
private/playbooks/deploy/: MyDeployConfigure.qml  MyDeployProcess.qml  MyTextEdit.qml  main.qml  playbook.json
private/playbooks/test/: TestBigScriptCommand.qml  TestCustomCommand.qml  TestFileContentCommand.qml  TestFileListCommand.qml  TestFileTransferCommand.qml  TestHttpCommand.qml  TestLocalCommand.qml  TestLocalDir.qml  TestLocalFile.qml  TestRemoteCommand.qml  (+3 more)
woterm/: CMakeLists.txt  android_deploy.json.in  improvedesc.txt  ipchelper.cpp  ipchelper.h  main.cpp  qkxbubblesyncwidget.cpp  qkxbubblesyncwidget.h  qkxbubblesyncwidget.ui  qkxbuttonassist.cpp  qkxbuttonassist.h  qkxconfirmwidget.cpp  qkxconfirmwidget.h  qkxconfirmwidget.ui  qkxdirassist.cpp  qkxdirassist.h  qkxdockwidget.cpp  qkxdockwidget.h  qkxfileassist.cpp  qkxfileassist.h  qkxfilesystemwatcher.cpp  qkxfilesystemwatcher.h  qkxfilterbox.cpp  qkxfilterbox.h  qkxfilterlineedit.cpp  qkxfilterlineedit.h  qkxfilterlistview.cpp  qkxfilterlistview.h  qkxfilterlistview.ui  qkxlabelassist.cpp  qkxlabelassist.h  qkxlicensedialog.cpp  qkxlicensedialog.h  qkxlicensedialog.ui  qkxloadingbarwidget.cpp  qkxloadingbarwidget.h  qkxmessagebox.cpp  qkxmessagebox.h  qkxplaintextedit.cpp  qkxplaintextedit.h  (+429 more)
woterm/android/: AndroidManifest.xml  build.gradle
woterm/android/res/drawable/: splashscreen.xml
woterm/android/res/xml/: file_provider.xml
woterm/android/src/com/aoyiduo/woterm/: AppUtils.java  MainActivity.java
woterm/js/: async.js  utils.js
woterm/language/: release.bat  update.bat  woterm_en.qm  woterm_en.ts  woterm_zh.qm  woterm_zh.ts
woterm/qml/: MoAboutView.qml  MoDBRestoreCryptInput.qml  MoDBRestoreFinish.qml  MoDBRestoreOnlineList.qml  MoDBRestoreSetup.qml  MoDBRestoreSftpInput.qml  MoDBRestoreView.qml  MoFileDialog.qml  MoIdentifyPublicKey.qml  MoIdentifyView.qml  MoInputDialog.qml  MoLanguageView.qml  MoMainMenu.qml  MoMainView.qml  MoMessageBox.qml  MoPasswordInput.qml  MoSessionManageView.qml  MoSessionProperty.qml  MoSftpConfigure.qml  MoSftpNameDialog.qml  MoSftpTransfer.qml  MoSftpView.qml  MoSimpleChoose.qml  MoSystemInformation.qml  MoToolBar.qml  main.qml  playbook.qml  qsftp.qml  sftp.qml  shot.js
woterm/resource/: keytab.template  template.plist.in  woterm.icns  woterm2.icns
woterm/resource/qss/: default.qss  desk_default.qss  mobile_default.qss  readme.txt
(+9 files in other folders)
